--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,16 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
 	<title>This is FRONTEND</title>
 </head>
 <body>
-	<div id="root"></div>
+	<article>
+		Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos nobis quaerat fuga quis reprehenderit facilis doloremque nesciunt? Eum eveniet suscipit eius <span>impedit beatae</span> distinctio blanditiis cumque, ullam non nulla id!
+	</article>
+
+	<h1 id="title">KREMEK KEMJE</h1>
+	<div>Elso</div>
+
 </body>
 </html>
